# product_matching_demo

./: .gitignore  README.md  Voorbeeld project.pptx  project_vb.ipynb  pyproject.toml  requirements.txt
